[package]
name = "iron-coder-feather-nrf52840-bsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", features = ["nrf52840", "time-driver-rtc1"] }
embassy-time = "0.1.2"
embedded-hal = "0.2.7"
